--- a/doc/user.pod
+++ b/doc/user.pod
@@ -8604,6 +8604,17 @@ C<isl_schedule_node_band_get_ast_isolate_option>.
 	__isl_give isl_id *isl_schedule_node_mark_get_id(
 		__isl_keep isl_schedule_node *node);
 
+	#include <isl/schedule_node.h>
+	__isl_give isl_multi_union_pw_aff *
+	isl_schedule_node_sequence_get_partial_schedule_multi_union_pw_aff(
+		__isl_keep isl_schedule_node *node);
+
+The function
+C<isl_schedule_node_sequence_get_partial_schedule_multi_union_pw_aff>
+returns a representation of the ordering expressed by the sequence node
+along with its filter children
+in the form of an C<isl_multi_union_pw_aff>.
+
 The following functions can be used to obtain an C<isl_multi_union_pw_aff>,
 an C<isl_union_pw_multi_aff> or C<isl_union_map> representation of
 partial schedules related to the node.
