--- a/doc/user.pod
+++ b/doc/user.pod
@@ -4426,6 +4426,9 @@ earlier dimensions before those that involve later dimensions.
 	__isl_give isl_space *
 	isl_space_domain_wrapped_range(
 		__isl_take isl_space *space);
+	__isl_give isl_space *
+	isl_space_range_wrapped_domain(
+		__isl_take isl_space *space);
 
 	#include <isl/local_space.h>
 	__isl_give isl_local_space *isl_local_space_domain(
