--- a/doc/user.pod
+++ b/doc/user.pod
@@ -5976,6 +5976,10 @@ the same (number of) parameters.
 	isl_union_map_intersect_domain_wrapped_domain(
 		__isl_take isl_union_map *umap,
 		__isl_take isl_union_set *domain);
+	__isl_give isl_union_map *
+	isl_union_map_intersect_range_wrapped_domain(
+		__isl_take isl_union_map *umap,
+		__isl_take isl_union_set *domain);
 
 	#include <isl/aff.h>
 	__isl_give isl_pw_aff *isl_pw_aff_intersect_domain(
