scheduler: optionally prevent skewing and scaling
Some applications prefer schedules that do not perform
any skewing (or scaling).  Add an option that bounds
the sum of the absolute values of the coefficients to one
for each statement.
Like all other bounds on coefficients, this option
is ignored by the Feautrier scheduler.

It would be possible to introduce an option that bounds
this sum by an arbitrary number instead, but this would
not play very well with the incremental scheduler
as preventing the sum from accumulating beyond the bound
over successive cluster mergings would require introducing
extra variables in the ILP problem that encode
the absolute values of the coefficients of the original variables
(which may be linear combinations of the cluster variables).
In the special case of bound one, there is no such accumulation.
(Note that the size of individual coefficients
may also grow beyond the schedule_max_coefficient bound
in the current code base, but this can be solved
without introducing such variables.)

Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -9648,6 +9648,11 @@ L</"Schedule Trees">.
 		isl_ctx *ctx);
 	isl_stat isl_options_set_schedule_max_constant_term(
 		isl_ctx *ctx, int val);
+	int isl_options_get_schedule_unit_max_var_coefficient_sum(
+		isl_ctx *ctx);
+	isl_stat
+	isl_options_set_schedule_unit_max_var_coefficient_sum(
+		isl_ctx *ctx, int val);
 	int isl_options_get_schedule_max_constant_term(
 		isl_ctx *ctx);
 	isl_stat isl_options_set_schedule_serialize_sccs(
@@ -9700,6 +9705,14 @@ This option can significantly increase the speed of the scheduling calculation
 and may also prevent fusing of unrelated dimensions. A value of -1 means that
 this option does not introduce bounds on the variable or parameter
 coefficients.
+
+=item * schedule_unit_max_var_coefficient_sum
+
+If this option is set, then the sum of the coefficients for the variables
+(in absolute values) is bounded by one for each statement.
+This means that only schedules that are combinations of permutations and
+reversals on the statement indices are allowed.
+This option has no effect on the Feautrier style scheduler.
 
 =item * schedule_max_constant_term
 
