--- a/doc/user.pod
+++ b/doc/user.pod
@@ -4069,6 +4069,12 @@ the following functions can be used.
 	isl_bool isl_multi_pw_aff_involves_dims(
 		__isl_keep isl_multi_pw_aff *mpa,
 		enum isl_dim_type type, unsigned first, unsigned n);
+	isl_bool isl_union_pw_aff_involves_param_id(
+		__isl_keep isl_union_pw_aff *upa,
+		__isl_keep isl_id *id);
+	isl_bool isl_union_pw_multi_aff_involves_param_id(
+		__isl_keep isl_union_pw_multi_aff *upma,
+		__isl_keep isl_id *id);
 
 	#include <isl/polynomial.h>
 	isl_bool isl_qpolynomial_involves_dims(
@@ -4079,6 +4085,13 @@ the following functions can be used.
 		__isl_keep isl_id *id);
 	isl_bool isl_pw_qpolynomial_fold_involves_param_id(
 		__isl_keep isl_pw_qpolynomial_fold *pwf,
+		__isl_keep isl_id *id);
+	isl_bool isl_union_pw_qpolynomial_involves_param_id(
+		__isl_keep isl_union_pw_qpolynomial *upwqp,
+		__isl_keep isl_id *id);
+	isl_bool
+	isl_union_pw_qpolynomial_fold_involves_param_id(
+		__isl_keep isl_union_pw_qpolynomial_fold *upwf,
 		__isl_keep isl_id *id);
 
 Similarly, the following functions can be used to check whether
