--- a/doc/user.pod
+++ b/doc/user.pod
@@ -2282,7 +2282,7 @@ from
 	#include <isl/map.h>
 	int isl_map_n_basic_map(__isl_keep isl_map *map);
 
-It is also possible to obtain a list of basic sets from a set
+It is also possible to obtain a list of basic sets or sets from a set
 or union set
 
 	#include <isl/set.h>
@@ -2292,6 +2292,8 @@ or union set
 	#include <isl/union_set.h>
 	__isl_give isl_basic_set_list *
 	isl_union_set_get_basic_set_list(
+		__isl_keep isl_union_set *uset);
+	__isl_give isl_set_list *isl_union_set_get_set_list(
 		__isl_keep isl_union_set *uset);
 
 The returned list can be manipulated using the functions in L<"Lists">.
