--- a/doc/user.pod
+++ b/doc/user.pod
@@ -4033,6 +4033,9 @@ the following functions can be used.
 	isl_bool isl_basic_set_involves_dims(
 		__isl_keep isl_basic_set *bset,
 		enum isl_dim_type type, unsigned first, unsigned n);
+	isl_bool isl_set_involves_param_id(
+		__isl_keep isl_set *set,
+		__isl_keep isl_id *id);
 	isl_bool isl_set_involves_dims(__isl_keep isl_set *set,
 		enum isl_dim_type type, unsigned first, unsigned n);
 
@@ -4040,6 +4043,9 @@ the following functions can be used.
 	isl_bool isl_basic_map_involves_dims(
 		__isl_keep isl_basic_map *bmap,
 		enum isl_dim_type type, unsigned first, unsigned n);
+	isl_bool isl_map_involves_param_id(
+		__isl_keep isl_map *map,
+		__isl_keep isl_id *id);
 	isl_bool isl_map_involves_dims(__isl_keep isl_map *map,
 		enum isl_dim_type type, unsigned first, unsigned n);
 
