--- a/doc/user.pod
+++ b/doc/user.pod
@@ -4049,7 +4049,15 @@ the following functions can be used.
 	isl_bool isl_map_involves_dims(__isl_keep isl_map *map,
 		enum isl_dim_type type, unsigned first, unsigned n);
 
+	#include <isl/union_set.h>
+	isl_bool isl_union_set_involves_param_id(
+		__isl_keep isl_union_set *uset,
+		__isl_keep isl_id *id);
+
 	#include <isl/union_map.h>
+	isl_bool isl_union_map_involves_param_id(
+		__isl_keep isl_union_map *umap,
+		__isl_keep isl_id *id);
 	isl_bool isl_union_map_involves_dims(
 		__isl_keep isl_union_map *umap,
 		enum isl_dim_type type, unsigned first, unsigned n);
