--- a/doc/user.pod
+++ b/doc/user.pod
@@ -2944,6 +2944,19 @@ the following functions.
 	isl_multi_union_pw_aff_free(
 		__isl_take isl_multi_union_pw_aff *mupa);
 
+The number of base expressions in a multiple
+expression can be obtained using the following functions.
+
+	#include <isl/val.h>
+	int isl_multi_val_size(__isl_keep isl_multi_val *mv);
+
+	#include <isl/aff.h>
+	int isl_multi_aff_size(__isl_keep isl_multi_aff *multi);
+	int isl_multi_pw_aff_size(
+		__isl_keep isl_multi_pw_aff *mpa);
+	int isl_multi_union_pw_aff_size(
+		__isl_keep isl_multi_union_pw_aff *mupa);
+
 The base expression at a given position of a multiple
 expression can be extracted using the following functions.
 
