split up schedule_max_coefficient into schedule_max_{var,param}_coefficient
The schedule_max_coefficient was introduced in isl-0.09-70-g2b54bb607
(scheduler: allow to bound the coefficients in the calculated schedule,
Sun Feb 19 14:05:50 2012 +0100) to bound the schedule coefficients of
both the parameters and the variables based on the observation
that bounding these coefficients can have a significant impact
on the performance of the scheduler.  However, it is not clear
from the commit message whether only bounding the coefficients
of the variables would have been sufficient.
Moreover, the scheduler has been improved significantly since then and
the original observation may no longer apply.
In any case, the effect of variable and parameter coefficients
is very different and it does not seem right to bound them
using the same option.  If anything, the parameter coefficients
are expected to behave more like the constant terms.

The schedule_max_coefficient option is currently not strictly enforced
by the incremental scheduler.  This will be fixed in an upcoming commit,
but it only seems useful to do this for the variable coefficients,
especially because the same infrastructure will be reused later
to optionally only consider non-negative variable coefficients.
There is no need to do the latter for parameter coefficients because
they are already forced to be non-negative since isl-0.16.1-214-g99f23962e
(schedule construction: use only positive parameter coefficients,
Fri Apr 1 16:51:07 2016 +0200).

Split up the schedule_max_coefficient option into
two options, schedule_max_var_coefficient and schedule_max_param_coefficient.
This will allow the schedule_max_var_coefficient option
to be enforced by the incremental scheduler without necessarily
also having to do the same with the schedule_max_param_coefficient option.

For backward compatibility, the old option is kept and whenever
it is set, both schedule_max_var_coefficient and
schedule_max_param_coefficient are set 

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -10146,6 +10146,14 @@ L</"Schedule Trees">.
 =head3 Options
 
 	#include <isl/schedule.h>
+	isl_stat isl_options_set_schedule_max_var_coefficient(
+		isl_ctx *ctx, int val);
+	int isl_options_get_schedule_max_var_coefficient(
+		isl_ctx *ctx);
+	isl_stat isl_options_set_schedule_max_param_coefficient(
+		isl_ctx *ctx, int val);
+	int isl_options_get_schedule_max_param_coefficient(
+		isl_ctx *ctx);
 	isl_stat isl_options_set_schedule_max_coefficient(
 		isl_ctx *ctx, int val);
 	int isl_options_get_schedule_max_coefficient(
@@ -10201,13 +10209,13 @@ L</"Schedule Trees">.
 
 =over
 
-=item * schedule_max_coefficient
+=item * schedule_max_var_coefficient
 
-This option enforces that the coefficients for variable and parameter
+This option enforces that the coefficients for variable
 dimensions in the calculated schedule are not larger than the specified value.
 This option can significantly increase the speed of the scheduling calculation
 and may also prevent fusing of unrelated dimensions. A value of -1 means that
-this option does not introduce bounds on the variable or parameter
+this option does not introduce bounds on the variable
 coefficients.
 If the C<schedule_whole_component> option is turned off,
 then the bound gets applied to both the schedules
@@ -10215,6 +10223,25 @@ of the individual strongly connected components and their combinations.
 The coefficients can accumulate during this process and
 may therefore end up being (much) larger than the bound.
 This option has no effect on the Feautrier style scheduler.
+
+=item * schedule_max_param_coefficient
+
+This option enforces that the coefficients for parameter
+dimensions in the calculated schedule are not larger than the specified value.
+A value of -1 means that
+this option does not introduce bounds on the parameter
+coefficients.
+If the C<schedule_whole_component> option is turned off,
+then the bound gets applied to both the schedules
+of the individual strongly connected components and their combinations.
+The coefficients can accumulate during this process and
+may therefore end up being (much) larger than the bound.
+This option has no effect on the Feautrier style scheduler.
+
+=item * schedule_max_coefficient
+
+Setting this option sets both the C<schedule_max_var_coefficient> and
+the C<schedule_max_param_coefficient> option to the (same) specified value.
 
 =item * schedule_unit_max_var_coefficient_sum
 
