isl_union_map_extract_map: extract out isl_space_drop_all_params
This function will be reused in the next commit.

Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -1217,6 +1217,13 @@ Additional parameters can be added to a space using the following function.
 If a parameter with the given identifier already appears in the space,
 then it is not added again.
 
+Conversely, all parameters can be removed from a space
+using the following function.
+
+	#include <isl/space.h>
+	__isl_give isl_space *isl_space_drop_all_params(
+		__isl_take isl_space *space);
+
 The presence of a parameter in a space can be checked using
 the following function.
 
