add isl_pw_*_get_range_tuple_id convenience functions
The interface of isl_pw_*_get_tuple_id is not well designed
because it only works for some values of the "type" argument.
Moreover, the value in theory depends on whether
the function lives in a set (isl_dim_set) or a map space (isl_dim_out).
In practice, isl_dim_set is equal to isl_dim_out, but this knowledge
should only be used inside isl.
Provide isl_pw_*_get_range_tuple_id alternatives
to avoid these issues.

Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -1681,12 +1681,16 @@ using the following functions.
 		enum isl_dim_type type);
 	isl_bool isl_pw_aff_has_tuple_id(__isl_keep isl_pw_aff *pa,
 		enum isl_dim_type type);
+	__isl_give isl_id *isl_pw_aff_get_range_tuple_id(
+		__isl_keep isl_pw_aff *pa);
 	__isl_give isl_id *isl_pw_aff_get_tuple_id(
 		__isl_keep isl_pw_aff *pa,
 		enum isl_dim_type type);
 	isl_bool isl_pw_multi_aff_has_tuple_id(
 		__isl_keep isl_pw_multi_aff *pma,
 		enum isl_dim_type type);
+	__isl_give isl_id *isl_pw_multi_aff_get_range_tuple_id(
+		__isl_keep isl_pw_multi_aff *pma);
 	__isl_give isl_id *isl_pw_multi_aff_get_tuple_id(
 		__isl_keep isl_pw_multi_aff *pma,
 		enum isl_dim_type type);
@@ -1725,6 +1729,13 @@ using the following functions.
 	const char *isl_multi_union_pw_aff_get_tuple_name(
 		__isl_keep isl_multi_union_pw_aff *mupa,
 		enum isl_dim_type type);
+
+	#include <isl/polynomial.h>
+	__isl_give isl_id *isl_pw_qpolynomial_get_range_tuple_id(
+		__isl_keep isl_pw_qpolynomial *pwqp);
+	__isl_give isl_id *
+	isl_pw_qpolynomial_fold_get_range_tuple_id(
+		__isl_keep isl_pw_qpolynomial_fold *pwf);
 
 The C<type> argument needs to be one of C<isl_dim_in>, C<isl_dim_out>
 or C<isl_dim_set>.  As with C<isl_space_get_name>,
