add isl_space_get_map_{domain,range}_tuple_id convenience functions
The interface of isl_space_get_tuple_id is not well designed
because it only works for some values of the "type" argument.
Moreover, the value of this argument depends on whether
the first argument is a set or a map space.
Provide isl_space_get_map_{domain,range}_tuple_id alternatives
to avoid these issues.
In particular, these functions should only be called on map spaces.

Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -1548,6 +1548,10 @@ using the following functions.
 	isl_bool isl_space_has_tuple_id(
 		__isl_keep isl_space *space,
 		enum isl_dim_type type);
+	__isl_give isl_id *isl_space_get_map_domain_tuple_id(
+		__isl_keep isl_space *space);
+	__isl_give isl_id *isl_space_get_map_range_tuple_id(
+		__isl_keep isl_space *space);
 	__isl_give isl_id *isl_space_get_tuple_id(
 		__isl_keep isl_space *space, enum isl_dim_type type);
 	__isl_give isl_space *isl_space_set_tuple_name(
