add isl_space_set_set_tuple_id convenience function
The interface of isl_space_set_tuple_id is not well designed
because it only works for some values of the "type" argument.
Moreover, the value of this argument depends on whether
the first argument is a set or a map space.
Provide a isl_space_set_set_tuple_id alternative to avoid these issues.
In particular, this function should only be called on set spaces.

Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -1540,6 +1540,9 @@ The identifiers or names of entire spaces may be set or read off
 using the following functions.
 
 	#include <isl/space.h>
+	__isl_give isl_space *isl_space_set_set_tuple_id(
+		__isl_take isl_space *space,
+		__isl_take isl_id *id);
 	__isl_give isl_space *isl_space_set_tuple_id(
 		__isl_take isl_space *space,
 		enum isl_dim_type type, __isl_take isl_id *id);
