--- a/doc/user.pod
+++ b/doc/user.pod
@@ -2908,6 +2908,9 @@ projection operations in L</"Unary Operations">.
 		__isl_take isl_space *space);
 	__isl_give isl_multi_aff *isl_multi_aff_range_map(
 		__isl_take isl_space *space);
+	__isl_give isl_multi_aff *
+	isl_multi_aff_wrapped_range_map(
+		__isl_take isl_space *space);
 	__isl_give isl_multi_aff *isl_multi_aff_project_out_map(
 		__isl_take isl_space *space,
 		enum isl_dim_type type,
