document effect of max_coefficient in incremental scheduler
The incremental scheduler, which first schedules SCCs separately and
then combines these by incrementally scheduling clusters together,
does not specifically take into account the max_coefficient option,
which means that it is getting applied to both the intra-SCC scheduling and
the inter-cluster scheduling.  In the latter case, the constraint
ends up getting applied to the coefficients of the cluster schedule
rather than to the coefficients of the resulting schedule
on the original nodes.

This will get fixed (to some extent) in an upcoming commit.
For now, simply document the behavior.

Requested-by: Oleksandr Zinenko <oleksandr.zinenko@inria.fr>
Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/doc/user.pod
+++ b/doc/user.pod
@@ -10209,6 +10209,11 @@ This option can significantly increase the speed of the scheduling calculation
 and may also prevent fusing of unrelated dimensions. A value of -1 means that
 this option does not introduce bounds on the variable or parameter
 coefficients.
+If the C<schedule_whole_component> option is turned off,
+then the bound gets applied to both the schedules
+of the individual strongly connected components and their combinations.
+The coefficients can accumulate during this process and
+may therefore end up being (much) larger than the bound.
 This option has no effect on the Feautrier style scheduler.
 
 =item * schedule_unit_max_var_coefficient_sum
